# Visual_Grounding_QA_Engine

./: .gitignore  custom_execution_guide.txt  main.py  pyproject.toml
inference/: run.py
models/: BLIP.py  DINO.py
utils/: entity_extractor.py  visualize.py
